[revertme] hardcode needed args for gtnh + lwjgl3ify